@@ -416,7 +416,10 @@ let type_declarations ?(equality = false) ~loc env ~mark name
   in
   if err <> None then err else
   let err = match (decl1.type_kind, decl2.type_kind) with
-      (_, Type_abstract) -> None
+      (_, Type_abstract { immediate = imm }) ->
+       (match Ctype.check_decl_immediate env decl1 imm with
+        | Ok () -> None
+        | Error v -> Some (Immediate v))
     | (Type_variant cstrs1, Type_variant cstrs2) ->
         if mark then begin
           let mark usage cstrs =
@@ -443,20 +446,7 @@ let type_declarations ?(equality = false) ~loc env ~mark name
     | (_, _) -> Some Kind
   in
   if err <> None then err else
-  let abstr = decl2.type_kind = Type_abstract && decl2.type_manifest = None in
-  (* If attempt to assign a non-immediate type (e.g. string) to a type that
-   * must be immediate, then we error *)
-  let err =
-    if not abstr then
-      None
-    else
-      match
-        Type_immediacy.coerce decl1.type_immediate ~as_:decl2.type_immediate
-      with
-      | Ok () -> None
-      | Error violation -> Some (Immediate violation)
-  in
-  if err <> None then err else
+  let abstr = decl_is_abstract decl2 && decl2.type_manifest = None in
   let need_variance =
     abstr || decl1.type_private = Private || decl1.type_kind = Type_open in
   if not need_variance then None else
